[package]
name = "rustack"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "3.2", features = ["derive"] }
rusqlite = { version = "0.28", features = ["bundled"] }
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.1"
git2 = "0.15"
actix-web = "4.2"
tokio = { version = "1", features = ["full"] }